# login-backend

./: .gitignore  celerybeat-schedule  df_results.csv  dtao_history.py  forex.py  pyproject.toml  runcelery  runserver.py  temp.py  valpf.py  writeInDb.py  z_tests.py
migrations/versions/: 00f2f6f12466_create_pf_history_table.py  05df7c68afec_create_dtao_history_table.py  2a17545c86bb_create_dtao_list_table.py  2b75e6eebf3e_update_asset_table_with_qty_by_wallet.py  340c3b17e226_create_transaction_table.py  35436faa3e0f_create_small_tokens_for_specific_tokens_.py  3c35ce39771a_create_fiat_history_table.py  6fdba4e3f95c_create_dtao_history_table.py  77de86041b8d_create_asset_table.py  7da70bf445be_update_token_table_with_new_columns.py  867c0fc25fb0_create_dtao_list_table.py  9aeb2eae8413_create_smalltoken_table.py  b7f9e1b3299d_create_asset_table.py  d8f7f69ccc7d_create_user_table.py  fdb90abc0094_upgrading_user_table.py  fe62c0296c45_create_token_table.py
src/: CADUSD_history.csv  CHFUSD_history.csv  EURUSD_history.csv  __init__.py  config.py  transactions.csv
src/calculation/: asset.py
src/celery/: asyncio_tasks.py  charts.py  coingecko.py  dtao.py  fiat.py  histo.py  tasks.py
src/db/: database.sqlite  main.py  models.py
src/routes/: asset.py  auth.py  charts.py  history.py  token.py  transaction.py  user.py
src/schemes/: asset.py  auth.py  history.py  token.py  transaction.py  user.py
src/services/: asset.py  auth.py  charts.py  history.py  token.py  transaction.py  user.py
src/tasks/: coingecko.py  dtao.py  tasks.py
src/utils/: asset.py  calculations.py  db.py  decoration.py  tvdatafeed.py
