[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.2",
    "bcrypt>=4.0.*",
    "bittensor>=9.7.0",
    "fastapi>=0.110.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "pytest-asyncio>=1.0.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["src/tests"]
filterwarnings = [
    "ignore:'crypt' is deprecated:DeprecationWarning",
    "ignore:Accessing the 'model_fields' attribute.*:DeprecationWarning",
]

